--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-table-component": "^1.2.2",
     "react-native-uuid": "^2.0.1",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
